# dev-archive

./: .env.example  .git.example  .gitignore  README.md
client/: package-lock.json  package.json
client/src/: App.tsx  components.tsx  index.css  services.ts  types.ts
server/: evals.csv  main.py  pyproject.toml  rag.py
server/history/: db.py
server/ingestion/: embed_upsert.py
server/retrieval/: rag.py
